Restructured the activity main layout and added activities for the setup operation of user information and emergency contacts

--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Rescue Pulse</string>
+    <string-array name="emergency_services">
+        <item>Police</item>
+        <item>Fire Department</item>
+        <item>Ambulance</item>
+    </string-array>
 </resources>
